--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ baseurl: ''
 lang: en-US
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: America/Chicago
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
@@ -25,18 +25,18 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://dragoncrafted87.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: dragoncrafted87             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: dragoncrafted87            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: Scott Gudeman
   email: example@doamin.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
