update the config to the correct icons and title

--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ timezone: America/Chicago
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: Chirpy                          # the main title
+title: DragonCrafted87                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: The Dragon's Blog   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, portfolio, sidebar,
@@ -37,7 +37,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Scott Gudeman
-  email: example@doamin.com             # change to your email address
+  email: dragoncrafted87@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username      # change to your twitter homepage
