--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ theme_mode:   # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://avatars.githubusercontent.com/u/24697493?v=4
+avatar: https://avatars.githubusercontent.com/u/24697493
 
 # boolean type, the global switch for ToC in posts.
 toc: true
